# zork1

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: CLI_IMPLEMENTATION_SUMMARY.md  CLI_MODULE.md  CLI_QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  OPERATIONS_CATALOG.md  chunk1-parse-results.md
docs/plans/: 2025-11-23-zil-interpreter-design.md  2025-11-23-zil-interpreter-implementation.md  2025-11-24-command-parser.md  2025-11-24-extended-evaluator.md  2025-11-24-output-buffer-unification-design.md  2025-11-24-output-buffer-unification.md  2025-11-24-routine-executor.md  2025-11-24-zil-operations-implementation.md  2025-11-24-zil-operations-registry.md  2025-11-25-batch5-6-implementation.md  2025-11-25-zork1-completion-design.md  2025-11-25-zork1-completion-implementation.md  2025-11-26-chunk1-parser-foundation.md  2025-11-26-chunk2-file-processing.md  2025-11-26-chunk3-macro-system.md  2025-11-26-chunk4-directive-system.md  2025-11-26-chunk5-command-parser.md  2025-11-26-zork1-interpreter-completion-design.md
tests/: test_cli_json_mode.py  test_cli_tell_integration.py  test_import.py  test_tell_output.py
tests/cli/: test_repl.py
tests/compiler/: __init__.py  test_ast_merger.py  test_conditional_macros.py  test_cycle_detection.py  test_directive_ast.py  test_directive_processor.py  (+17 more)
zil_interpreter/: __main__.py
zork-ui/: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_COMPLETE.md  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  USAGE.md  package.json  start.sh  test-game-selection.ts  test-integration.ts  test-save-load.ts  test-ui.sh  tsconfig.json
(+118 files in other folders)
