[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zil-interpreter"
version = "0.1.0"
description = "Python interpreter for ZIL (Zork Implementation Language)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lark>=1.1.8",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "mypy>=1.7.1",
]

[project.scripts]
zil = "zil_interpreter.cli.repl:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
